Refactor tests; simplify math code